# pg-faker

./: .gitignore  README.md  address-fake.py  consts.py  email-fake.py  fake.py  faker.control  name-fake.py  phone-fake.py  pyproject.toml  utils.py
.github/workflows/: deploy.yml  lint.yml  release.yml
deploy/: Dockerfile  postgrest.conf
extension/: CMakeLists.txt
